--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk: oraclejdk8
 env:
   global:
     - ANDROID_API_LEVEL=28
-    - EMULATOR_API_LEVEL=21
+    - EMULATOR_API_LEVEL=25
     - ANDROID_BUILD_TOOLS=28.0.3
     - ADB_INSTALL_TIMEOUT=20 # minutes
  
@@ -51,7 +51,7 @@ before_install:
 
 script:
   - android list targets
-  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi armeabi-v7a --tag google-apis
+  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a --tag google-apis
   - emulator -avd test -no-skin -no-audio -no-window &
   - mkdir -p build/reports
   - android-wait-for-emulator
