--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
     - EMULATOR_API_LEVEL=25
     - ANDROID_BUILD_TOOLS=28.0.3
     - ADB_INSTALL_TIMEOUT=20 # minutes
+    - ANDROID_TAG=google_apis
  
 android:
   components:
@@ -20,8 +21,8 @@ android:
     - extra-android-support
     - extra-google-m2repository
     - extra-android-m2repository # for design library
-    - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-google_apis-$EMULATOR_API_LEVEL
+    - sys-img-armeabi-v7a-$ANDROID_TAG-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-$ANDROID_TAG-$EMULATOR_API_LEVEL
 
   licenses:
     - android-sdk-preview-license-.+
@@ -51,7 +52,7 @@ before_install:
 
 script:
   - android list targets
-  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a --tag google-apis
+  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a --tag $ANDROID_TAG
   - emulator -avd test -no-skin -no-audio -no-window &
   - mkdir -p build/reports
   - android-wait-for-emulator
