Updated the project structure

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "com.example.ruturaj.canteenapp"
-        minSdkVersion 24
+        applicationId "io.github.djunicode.canteen"
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
