--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,36 @@
 language: android
-sudo: false
+sudo: required
 jdk: oraclejdk8
 
 env:
   global:
     - ANDROID_API_LEVEL=28
-    - EMULATOR_API_LEVEL=25
-    - ANDROID_BUILD_TOOLS=28.0.3
+    - EMULATOR_API_LEVEL=22
+    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ADB_INSTALL_TIMEOUT=20 # minutes
     - ANDROID_TAG=google_apis
+    - ANDROID_ABI=armeabi-v7a
+    - QEMU_AUDIO_DRV=none
  
 android:
   components:
     - tools
     - platform-tools
     - tools
-    - build-tools-$ANDROID_BUILD_TOOLS
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
     - android-$EMULATOR_API_LEVEL
     - extra-android-support
     - extra-google-m2repository
     - extra-android-m2repository # for design library
-    - sys-img-armeabi-v7a-$ANDROID_TAG-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-$ANDROID_TAG-$EMULATOR_API_LEVEL
+    - sys-img-$ANDROID_ABI-$ANDROID_TAG-$ANDROID_API_LEVEL
+    - sys-img-$ANDROID_ABI-$ANDROID_TAG-$EMULATOR_API_LEVEL
 
   licenses:
     - android-sdk-preview-license-.+
     - android-sdk-license-.+
     - google-gdk-license-.+
 
-before_cache:
-  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 cache:
   directories:
     - $HOME/.gradle/caches/
@@ -39,7 +38,7 @@ cache:
     - $HOME/.android/build-cache
 
 before_install:
-  - yes | sdkmanager "cmake;3.6.4111459"
+  - yes | sdkmanager "platforms;android-"$ANDROID_API_LEVEL
   - wget https://dl.google.com/android/repository/android-ndk-r18b-linux-x86_64.zip
   - unzip android-ndk-r18b-linux-x86_64.zip -d $HOME > /dev/null
   - export ANDROID_NDK_HOME=$HOME/android-ndk-r18b
@@ -48,12 +47,11 @@ before_install:
   - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
   - chmod +x gradlew
-  - ./gradlew dependencies || true # DON'T ADD unless you are getting "Install missing components using SDK manager"
 
 script:
   - android list targets
-  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a --tag $ANDROID_TAG
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
+  - emulator -avd test -no-window &
   - mkdir -p build/reports
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
